--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-#root {
-  max-width: 1280px;
+.main-content {
+  max-width: 90vw;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: black;
 }
-
