--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,13 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-  background-image: url("https://media.istockphoto.com/id/852542438/vector/seamless-pattern-with-lobster.jpg?s=612x612&w=0&k=20&c=9ODsSpGo0Qg2rYt-zV3etxxz2lKoh_5nL0uJXrWWezE=");
+  width: 100%;
+  overflow-x: hidden;
+  background-image:
+    linear-gradient(rgba(255, 255, 255, 0.8), rgba(255,255,255,0.6)),
+    url("https://media.istockphoto.com/id/852542438/vector/seamless-pattern-with-lobster.jpg?s=612x612&w=0&k=20&c=9ODsSpGo0Qg2rYt-zV3etxxz2lKoh_5nL0uJXrWWezE=");
   background-position: center;
   background-repeat: repeat;
-  background-color: rgba(255, 255, 255, 0.6);
   z-index: 0;
 }
 
