--- a/src/pages/LandingPage/components/LandingPageSection/LandingPageSection.module.css
+++ b/src/pages/LandingPage/components/LandingPageSection/LandingPageSection.module.css
@@ -5,3 +5,17 @@
   align-items: center;
   margin-top: 10px;
 }
+
+.divider {
+  width: 80%;
+  max-width: 800px;
+  height: 2px;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(0, 0, 0, 0.3),
+    transparent
+  );
+  margin: 3rem auto 1rem;
+  border-radius: 50%;
+}
