--- a/src/pages/LandingPage/components/About/About.module.css
+++ b/src/pages/LandingPage/components/About/About.module.css
@@ -3,4 +3,17 @@
   margin-top: 0;
   max-width: 1050px;
   padding: 0 30px;
+  font-size: 1.1rem;
+  color: #424242;
+  font-weight: 500;
+  line-height: 1.4;
+
 }
+
+@media (max-width: 868px) {
+  .aboutText {
+    padding: 0 25px;
+    font-size: 1rem;
+  }
+}
+
